fixing hero on mobile, adding clicky page tracking

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -387,8 +387,6 @@ button {
 
 .bann-img figure {
   background-color: rgba(65, 70, 75, 0.49);
-  width: 360px;
-  height: 360px;
   margin: 0;
   border-radius: 100%;
   border: 10px solid whitesmoke;
